--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+body, html{
+  height: 100%;
+  background: linear-gradient(#2bdee1, #37b7ee);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -10,6 +13,9 @@
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+  }
+  .results{
+    animation: App-logo-spin 20s ease-in-out;
   }
 }
 
@@ -28,11 +34,47 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  display:none
+}
+input:checked + img{
+  box-shadow: 10px 10px 10px #1c9294,
+              -5px -5px 10px #1c9294;
+  border-radius: 25%;
+}
+img {
+  width:12em;
+}
+button{
+  font-size: 1.3rem;
+  width: 9em;
+  height: 4.5em;
+  background:#8ab4da;
+  border-radius:80px;
+  box-shadow: 5px 5px 10px #2bdee0,
+              -5px -5px 10px #2bdee0;
+  outline: none;
+  border: none;
+}
+
+.set-to-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.column{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.middle{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.results{
+  font-size:2rem;
+}
+.computer-image{
+  width: 15em;
 }
