--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 body, html{
   height: 100%;
-  background: linear-gradient(#2bdee1, #37b7ee);
+  background: linear-gradient(#2eb6f0, #2d97c4);
 }
 .App-logo {
   height: 40vmin;
@@ -38,8 +38,8 @@ input{
   display:none
 }
 input:checked + img{
-  box-shadow: 10px 10px 10px #1c9294,
-              -5px -5px 10px #1c9294;
+  box-shadow: 10px 10px 10px #212929,
+              -5px -5px 10px #212929;
   border-radius: 25%;
 }
 img {
@@ -47,14 +47,21 @@ img {
 }
 button{
   font-size: 1.3rem;
+  font-weight: bold;
+  letter-spacing: 0.2em;
+  color: rgb(46, 220, 46);
   width: 9em;
   height: 4.5em;
-  background:#8ab4da;
+  background-color:black;
   border-radius:80px;
-  box-shadow: 5px 5px 10px #2bdee0,
-              -5px -5px 10px #2bdee0;
   outline: none;
-  border: none;
+  border: 2px solid black;
+  
+}
+button:active{
+  background-color:rgb(181, 179, 179);
+  transition-property: background-color;
+  transition-duration: 450ms; 
 }
 
 .set-to-grid{
